Fix userservice